# bazel-hytale-plugin-pipeline

./: .bazelrc  .gitignore  MODULE.template.bazel  README.md  build.sh  deploy.sh  deploy_dev.sh  maven_deps.json
.bazel/: bazel-hytale-plugin-pipeline  bin  out  testlogs  workspaces
.devcontainer/: install-dependencies.sh  setup_server.sh  start_server.sh
.devcontainer/debian/: devcontainer.json
bazel_config/credentials/docker/: .gitignore
build_defs/download/: download_hytale_server.bzl
build_defs/hytale/import_bundles/: BUILD.bazel
build_defs/k8s/: minikube.bzl  service_manifest.bzl
build_defs/k8s/postgres/: postgres.bzl
build_defs/spring/dependencies/: dependency_groups.bzl
build_defs/spring/import_bundles/: BUILD.bazel
build_defs/utils/environment/: environment_manifest.bzl  merge_envs.bzl
build_flags/: BUILD.bazel  flags.bzl
k8s/: BUILD.bazel
libs/common-api/: BUILD.bazel
libs/common-api/environment/base/: env.yaml
libs/common-api/environment/dev/: env.yaml
libs/common-api/environment/prod/: env.yaml
libs/common-api/src/main/java/org/example/common/api/: CommonApiNoop.java
libs/common-api/src/main/java/org/example/common/api/util/: KeyUtil.java
libs/common-api/src/main/java/org/myapplication/common/api/config/: GsonProvider.java  LocaleConfig.java  SchedulerConfig.java  ValidationHandler.java
libs/common-api/src/main/java/org/myapplication/common/api/entity/: AutoGeneratedUUIDIdBaseEntity.java  BaseEntity.java
libs/common-api/src/main/java/org/myapplication/common/api/model/: ApiError.java  ApiResponse.java  CheckedFunction.java  Result.java
libs/common-api/src/main/java/org/myapplication/common/api/validation/advice/: GlobalExceptionHandler.java
libs/common-api/src/main/java/org/myapplication/common/api/validation/annotation/: UUID.java  ValidPhoneNumber.java
libs/common-api/src/main/java/org/myapplication/common/api/validation/resolver/: ResolvedFromPathVariable.java
libs/common-api/src/main/java/org/myapplication/common/api/validation/typeadapter/: InstantTypeAdapter.java
libs/common-api/src/main/java/org/myapplication/common/api/validation/validator/: PhoneNumberValidator.java
libs/common-service/: BUILD.bazel
libs/common-service/environment/base/: env.yaml
libs/common-service/environment/dev/: env.yaml
libs/common-service/environment/prod/: env.yaml
libs/common-service/src/main/java/org/myapplication/common/service/config/: CommonServiceLibraryConfig.java
libs/common-web-service/: BUILD.bazel
libs/common-web-service/environment/base/: env.yaml
libs/common-web-service/environment/dev/: env.yaml
libs/common-web-service/environment/prod/: env.yaml
libs/common-web-service/src/main/java/org/myapplication/commonweb/service/config/: CachingConfig.java  CommonWebConfig.java  CommonWebServiceLibraryConfig.java
libs/common-web-service/src/main/java/org/myapplication/commonweb/service/jwt/: User.java  UserClaims.java  UserClaimsExtractorService.java  UserContextService.java  UserCreatorService.java
libs/common-web-service/src/main/java/org/myapplication/commonweb/service/resolver/: UserArgumentResolver.java
libs/common-web-service/src/main/java/org/myapplication/commonweb/service/security/: SecurityConfig.java
plugin/: BUILD.bazel
plugin/assets/: BUILD.bazel
plugin/assets/Server/Weathers/: SampleVoidWeather.json
plugin/environment/: BUILD.bazel
plugin/environment/base/: env.yaml
plugin/environment/dev/: env.yaml
plugin/environment/prod/: env.yaml
plugin/manifest/: BUILD.bazel  constants.bzl  manifest_rules.bzl
plugin/src/main/java/com/example/exampleplugin/: ExamplePlugin.java
plugin/src/main/java/org/example/myplugin/: MyPlugin.java
plugin/src/main/java/org/example/myplugin/command/: ExampleCommand.java
plugin/src/main/resources/: manifest.json
scripts/: generate_module_bazel.py  start_minikube_podman_mac.sh
scripts/mac/: start_colima_with_udp_networking.sh
services/gateway/: BUILD.bazel
services/gateway/traefik/: BUILD.bazel  Chart.yaml
services/gateway/values/: BUILD.bazel  values.yaml
services/keycloak/: BUILD.bazel  keycloak-deployment.yaml  keycloak-volume-patch.yaml  kustomization.yaml  master-realm.json  start-keycloak.sh
services/service-a/: BUILD.bazel
services/service-a/configuration/base/: deployment.yaml  env-overrides.yaml  ingressroute.yaml  service.yaml
services/service-a/configuration/dev/: env-overrides.yaml  kustomization.yaml
services/service-a/configuration/prod/: env-overrides.yaml
services/service-a/container/: wait-for-keycloak.sh
services/service-a/src/main/java/org/myapplication/servicea/service/: DefaultGrpcChannelFactory.java  GrpcServiceBServiceBlockingStubConfig.java  ServiceAApplication.java
services/service-a/src/main/resources/db/: liquibase-changelog.xml
services/service-a/src/main/resources/db/changelog/: 01-create-schema.xml
services/service-b/: BUILD.bazel
services/service-b/configuration/base/: deployment.yaml  env-overrides.yaml  ingressroute.yaml  kustomization.yaml  secret.yaml  service.yaml
services/service-b/configuration/dev/: env-overrides.yaml
services/service-b/configuration/prod/: env-overrides.yaml
services/service-b/container/: wait-for-keycloak.sh
services/service-b/src/main/java/org/myapplication/serviceb/service/: ApiErrorProtoMapper.java  GrpcServiceBService.java  ServiceBApplication.java
services/service-b/src/main/resources/db/changelog/: 01-create-schema.xml
services/service-b/src/proto/error/: api_error.proto
services/service-b/src/proto/service/: serviceb_service.proto
