module(
    name = "bazel-hytale-pipeline_example-plugin",
    version = "0.0.0",
)

bazel_dep(name = "rules_jvm_external", version = "6.8")
bazel_dep(name = "rules_java", version = "8.16.1")

bazel_dep(name = "rules_proto_grpc_java", version = "5.8.0")
bazel_dep(name = "protobuf", version = "31.1")
bazel_dep(name = "rules_pkg", version = "1.1.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

### MAVEN_DEPS_SECTION ###

use_repo(maven, "maven")

http_jar = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_jar")

http_jar(
    name = "remote-hytale-server",
    url = "https://artifacts.yakovliam.com/HytaleServer.jar",
    # sha256 = "<SHA‑256 checksum here>", # Not yet implemented on the yakovliam artifacts server
)

# http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
#
# http_archive(
#     name = "hytale-server-remote",
#     url = "https://artifacts.yakovliam.com/HytaleServer.zip",
#     # sha256 = "<SHA256‑of‑zip>", # Not yet implemented on the yakovliam artifacts server
#     # You’ll need to provide a build_file or build_file_content
#     build_file_content = """
# java_import(
#     name = "hytale-server-jar",
#     jars = ["jar/HytaleServer.jar"],
#     visibility = ["//visibility:public"],
# )
# """,
# )
