load("//build_defs/k8s:minikube.bzl", "minikube_load_all")

# Aggregate all YAML files
filegroup(
    name = "all-k8s-manifests",
    srcs = [
        # Gateway
        "//services/gateway:manifests",

        # Keycloak
        "//services/keycloak:manifests",

        # Service A
        "//services/service-a:manifests",

        # Service B
        "//services/service-b:manifests",
    ],
)

# Load all images at once
minikube_load_all(
    name = "load-all-images",
    images = [
        "//services/service-a:service-a-tarball",
        "//services/service-b:service-b-tarball",
    ],
)

# Apply all manifests
genrule(
    name = "apply-all",
    srcs = [":all-k8s-manifests"],
    outs = ["apply-all.sh"],
    cmd = """echo '#!/bin/bash
set -e
for manifest in $(SRCS); do
  echo "Applying $$manifest..."
  kubectl apply -f $$manifest
done
echo "✅ All manifests applied!"
' > $@""",
    executable = True,
)
