load("@rules_java//java:defs.bzl", "java_binary", "java_library")
load("//build_defs/utils/environment:environment_manifest.bzl", "environment_manifest")

provided_deps = [
    "//build_defs/hytale/import_bundles:hytale-required-deps",
]

shade_deps = [
    "//libs/common-api:common-api",
    "@maven//:org_slf4j_slf4j_api",
    "@maven//:ch_qos_logback_logback_classic",
    "@maven//:com_google_code_gson_gson",
    # Your dependencies here
]

version = "0.0.0-SNAPSHOT"

artifact_name = "ExamplePlugin"

artifact_file_name = artifact_name + "-" + version

java_library(
    name = "plugin_lib",
    srcs = glob(["src/main/java/org/example/myplugin/**/*.java"]),
    deps = shade_deps + provided_deps,
)

environment_manifest(
    name = "manifest",
    library_labels = ["//libs/common-api"],
)

genrule(
    name = "resource-environment",
    srcs = [":manifest_root"],
    outs = ["src/main/resources/env.yaml"],
    cmd = "cp $< $@",
)

java_binary(
    name = artifact_name,
    main_class = "none",
    resources = glob(["src/main/resources/**"]) + [
        ":resource-environment",
    ],
    runtime_deps = [
        ":plugin_lib",
    ] + provided_deps,
)

genrule(
    name = "dist",
    srcs = [":" + artifact_name + "_deploy.jar"],
    outs = [artifact_file_name + ".jar"],
    cmd = "cp $(location :" + artifact_name + "_deploy.jar) $@",
    visibility = ["//visibility:public"],
)
