load("@rules_java//java:defs.bzl", "java_binary", "java_library")
load("//build_defs/utils/environment:environment_manifest.bzl", "environment_manifest")
load("//plugin/manifest:constants.bzl", "ARTIFACT_NAME", "VERSION")

shade_deps = [
    "@maven//:org_slf4j_slf4j_api",
    "@maven//:ch_qos_logback_logback_classic",
    "@maven//:com_google_code_gson_gson",
    # Your dependencies here
]

_jar_name = "{}-{}.jar".format(ARTIFACT_NAME, VERSION)

java_library(
    name = "server_api",
    neverlink = True,
    exports = [
        "@maven//:com_hypixel_hytale_Server",
    ],
)

java_library(
    name = "plugin_lib",
    srcs = glob(["src/main/java/com/example/exampleplugin/**/*.java"]),
    deps = shade_deps + [
        ":server_api",
    ],
)

java_library(
    name = "assets_lib",
    resource_strip_prefix = "plugin/assets",
    resources = ["//plugin/assets"],
    visibility = ["//visibility:public"],
)

java_library(
    name = "manifest_lib",
    resource_strip_prefix = "plugin/manifest",
    resources = ["//plugin/manifest"],
    visibility = ["//visibility:public"],
)

java_binary(
    name = ARTIFACT_NAME,
    create_executable = False,
    main_class = "none",
    runtime_deps = [
        ":assets_lib",
        ":manifest_lib",
        ":plugin_lib",
    ],
)

genrule(
    name = "dist",
    srcs = [":" + ARTIFACT_NAME + "_deploy.jar"],
    outs = [_jar_name],
    cmd = "cp $(location :" + ARTIFACT_NAME + "_deploy.jar) $@",
    visibility = ["//visibility:public"],
)
