load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "server_api",
    neverlink = True,
    exports = [
        "@maven//:com_hypixel_hytale_Server",
    ],
)

java_library(
    name = "common-api",
    srcs = glob(["src/main/java/org/example/common/api/**/*.java"]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":server_api",
    ],
)
