load("//build_defs/spring/dependencies:dependency_groups.bzl", "MICROSERVICE_API_DEPS")

java_library(
    name = "common-service",
    srcs = glob(["src/main/java/org/myapplication/common/service/**/*.java"]),
    visibility = [
        "//visibility:public",
    ],
    deps = MICROSERVICE_API_DEPS,
)
