load("//build_defs/spring/dependencies:dependency_groups.bzl", "MICROSERVICE_WEB_DEPS")

java_library(
    name = "common-web-service",
    srcs = glob(["src/main/java/org/myapplication/commonweb/service/**/*.java"]),
    visibility = [
        "//visibility:public",
    ],
    deps = MICROSERVICE_WEB_DEPS,
)
