package(default_visibility = ["//visibility:public"])

genrule(
    name = "deployment",
    srcs = [
        "keycloak-deployment.yaml",
        "kustomization.yaml",
        "keycloak-volume-patch.yaml",
        "master-realm.json",
        "start-keycloak.sh",
    ],
    outs = ["keycloak-deployment.yaml.out"],
    cmd = """
    # Copy all files to the same directory
    cp $(location keycloak-deployment.yaml) keycloak-deployment.yaml
    cp $(location kustomization.yaml) kustomization.yaml
    cp $(location keycloak-volume-patch.yaml) keycloak-volume-patch.yaml
    cp $(location master-realm.json) master-realm.json
    cp $(location start-keycloak.sh) start-keycloak.sh

    # Build with kustomize
    kustomize build . > $@
    """,
)

filegroup(
    name = "manifests",
    srcs = [":deployment"],
)
