load("@rules_oci//oci:defs.bzl", "oci_image", "oci_image_index", "oci_load", "oci_push")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@rules_spring//springboot:springboot.bzl", "springboot")
load("//build_defs/k8s:service_manifest.bzl", "k8s_service_manifest")
load("//build_defs/k8s/postgres:postgres.bzl", "postgres_service")
load("//build_defs/spring/dependencies:dependency_groups.bzl", "GRPC_DEPS", "MICROSERVICE_WEB_DEPS")

package(default_visibility = ["//visibility:public"])

## SPRING & JAVA BUILD LOGIC
springboot_deps = [
    "//build_defs/spring/import_bundles:springboot_required_deps",
    "//libs/common-api:common-api",
    "//libs/common-web-service:common-web-service",
] + GRPC_DEPS + MICROSERVICE_WEB_DEPS

java_plugin(
    name = "mapstruct_plugin",
    processor_class = "org.mapstruct.ap.MappingProcessor",
    deps = ["@maven//:org_mapstruct_mapstruct_processor"],
)

java_library(
    name = "service-a",
    srcs = glob(["src/main/java/org/myapplication/servicea/**/*.java"]),
    plugins = [
        ":mapstruct_plugin",
    ],
    resources = glob([
        "src/main/resources/**",
    ]),
    deps = springboot_deps + [
        "//services/service-b:service-b-grpc",
    ] + [
        # JPA
        "@maven//:jakarta_persistence_jakarta_persistence_api",
        "@maven//:org_springframework_boot_spring_boot_starter_data_jpa",
        "@maven//:org_springframework_data_spring_data_jpa",

        # Hibernate
        "@maven//:org_hibernate_orm_hibernate_core",
        "@maven//:org_hibernate_validator_hibernate_validator",

        # Postgres + Liquibase
        "@maven//:org_postgresql_postgresql",
        "@maven//:org_liquibase_liquibase_core",

        # State Machine
        "@maven//:org_springframework_statemachine_spring_statemachine_core",

        # No idea what this is. But it's needed to build the project.
        "@maven//:io_projectreactor_reactor_core",
        "@maven//:jakarta_validation_jakarta_validation_api",
        "@maven//:org_springframework_spring_messaging",
    ],
)

springboot(
    name = "service-a-spring",
    boot_app_class = "org.myapplication.servicea.service.ServiceAApplication",
    boot_launcher_class = "org.springframework.boot.loader.launch.JarLauncher",
    java_library = ":service-a",
)

## INCLUDE START SCRIPT
genrule(
    name = "wait-for-keycloak",
    srcs = ["container/wait-for-keycloak.sh"],
    outs = ["start.sh"],
    cmd = "cp $< $@",
)

## CREATE TAR FROM BINARIES & START SCRIPT
pkg_tar(
    name = "service-a-spring-tar",
    srcs = [
        ":service-a-spring",
        ":wait-for-keycloak",
    ],
    mode = "0755",
    package_dir = "/app",
)

## CREATE OCI IMAGES
oci_image(
    name = "service-a-image_arm64",
    base = "@java-base_linux_arm64_v8",
    entrypoint = ["/app/start.sh"],
    tars = [":service-a-spring-tar"],
)

oci_image(
    name = "service-a-image_amd64",
    base = "@java-base_linux_amd64",
    entrypoint = ["/app/service-a-spring"],
    tars = [":service-a-spring-tar"],
)

oci_image_index(
    name = "service-a-image",
    images = [
        ":service-a-image_arm64",
        ":service-a-image_amd64",
    ],
)

## CREATE TARBALL FROM OCI IMAGE
oci_load(
    name = "service-a-tarball-oci",
    format = "oci",
    image = ":service-a-image",
    repo_tags = ["myapplication/service-a:latest"],
)

filegroup(
    name = "service-a-tarball",
    srcs = [":service-a-tarball-oci"],
    output_group = "tarball",
)

## DEFINE K8S PIPELINE MANIFESTS
postgres_service(
    name = "postgres-service-a",
    db_name = "service-a_db",
    password_secret_name = "service-a-db-secret",
    service_name = "service-a",
)

k8s_service_manifest(
    name = "service-a_manifests",
    library_labels = ["//libs/common-web-service"],
    service_name = "service-a",
)

filegroup(
    name = "manifests",
    srcs = [
        ":postgres-service-a",
        ":service-a_manifests",
    ],
)
